--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,2 +1,3 @@
 <h1>{{ title }}</h1>
-<button mat-button (click)="openLoginForm()">Log in</button>
+<button mat-button color="primary" (click)="openLoginForm()">Log in</button>
+<button mat-button color="primary" (click)="openRegistrationForm()">Registration</button>
