add scss variables

--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,3 +1,1 @@
-<h1>{{ title }}</h1>
-<button mat-button color="primary" (click)="openLoginForm()">Log in</button>
-<button mat-button color="primary" (click)="openRegistrationForm()">Registration</button>
+<app-header></app-header>
