--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -11,7 +11,7 @@
 }
 
 .logo {
-  margin-right: auto;
+  margin: 0 auto 0 0;
   padding: spacing.$space-2 spacing.$space-4;
   background: linear-gradient(90deg, color.$base-text-1 0%, color.$base-text-1 35%, color.$base-text-2 100%);
   border-radius: border.$border-radius-6;
