--- a/src/app/components/login-dialog/login-dialog.component.html
+++ b/src/app/components/login-dialog/login-dialog.component.html
@@ -1,6 +1,6 @@
-<div class="wrapper">
-  <h2 class="title">Log in to your account</h2>
-  <p class="description">Welcome back! Please enter your details</p>
+<div class="dialog">
+  <h2 class="dialog__title">Log in to your account</h2>
+  <p class="dialog__description">Welcome back! Please enter your details</p>
 
   <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
     <mat-form-field>
@@ -21,6 +21,7 @@
       mat-button
       cdkFocusInitial
       type="submit"
+      class="dialog__btn dialog__btn--submit"
       [disabled]="!loginForm.valid">
       Log in
     </button>
