--- a/src/app/components/register-dialog/register-dialog.component.html
+++ b/src/app/components/register-dialog/register-dialog.component.html
@@ -1,6 +1,6 @@
-<div class="wrapper">
-  <h2 class="title">Registration</h2>
-  <p class="description">Fill all fields</p>
+<div class="dialog">
+  <h2 class="dialog__title">Registration</h2>
+  <p class="dialog__description">Fill all fields</p>
 
   <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
     <mat-form-field>
@@ -9,7 +9,7 @@
     </mat-form-field>
 
     <mat-form-field>
-      <mat-label>Email</mat-label>r
+      <mat-label>Email</mat-label>
       <input
         matInput
         type="email"
@@ -18,7 +18,7 @@
     </mat-form-field>
 
     <mat-form-field>
-      <mat-label>Password</mat-label>r
+      <mat-label>Password</mat-label>
       <input
         matInput
         type="password"
@@ -30,6 +30,7 @@
       mat-button
       cdkFocusInitial
       type="submit"
+      class="dialog__btn dialog__btn--submit"
       [disabled]="!registerForm.valid">
       Log in
     </button>
