--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,1 +1,7 @@
-<app-header></app-header>
+<div>
+  I am a home page
+</div>
+
+<article class="news">
+  <a class="twitter-timeline" data-lang="en" data-width="320" data-height="500" href="https://twitter.com/fsnastassia?ref_src=twsrc%5Etfw">Follow our news</a>
+</article>
