--- a/src/app/styles/variables/color.scss
+++ b/src/app/styles/variables/color.scss
@@ -1,6 +1,7 @@
 $base-black-0: #000000;
 $base-black-100: #222222;
 $base-white-0: #ffffff;
+$base-white-100: #efeeee;
 
 $base-text-900: #949494;
 $base-text-800: #999999;
