add preview to home page, assets folder, nav styles

--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,5 +1,25 @@
-<div>
-  I am a home page
+<div class="preview">
+  <h2 class="header">
+    Experience effortless shipping management:<br><span class="header__item">empowering</span> brokers,
+    shippers, and drivers<span class="header__item"> to drive<br> success together!</span>
+  </h2>
+
+  <img src="assets/images/home-preview.png" alt="preview">
+
+  <ul class="preview__list">
+    <li class="preview__list-item">
+      <mat-icon>check_circle</mat-icon>
+      Instantly issue virtual corporate cards
+    </li>
+    <li class="preview__list-item">
+      <mat-icon>check_circle</mat-icon>
+      Control spending before it happens
+    </li>
+    <li class="preview__list-item">
+      <mat-icon>check_circle</mat-icon>
+      Automate your expense management
+    </li>
+  </ul>
 </div>
 
 <article class="news">
