--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,14 +2,14 @@
 
 <nav class="nav">
   <ul>
-    <li class="nav__item">
-      <a href="#">Features</a>
+    <li class="nav__item" routerLinkActive="nav__item--active">
+      <a routerLink="/features">Features</a>
     </li>
-    <li class="nav__item">
-      <a href="#">Blog</a>
+    <li class="nav__item" routerLinkActive="nav__item--active">
+      <a routerLink="/blog">Blog</a>
     </li>
-    <li class="nav__item">
-      <a href="#">About</a>
+    <li class="nav__item" routerLinkActive="nav__item--active">
+      <a routerLink="/about">About</a>
     </li>
   </ul>
 </nav>
