--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -41,10 +41,10 @@ button {
       &:active {
         color: color.$base-white-0;
       }
+    }
 
-      &--active {
-        text-shadow: color.$base-white-0 0 0 5px;
-      }
+    &--active a {
+      text-shadow: color.$base-white-0 0 0 2px;
     }
   }
 }
