--- a/src/app/styles/variables/color.scss
+++ b/src/app/styles/variables/color.scss
@@ -5,9 +5,10 @@ $base-white-100: #efeeee;
 
 $base-text-900: #949494;
 $base-text-800: #999999;
-
+$base-text-100: #0F172A;
 $base-text-1: #6E49FC;
 $base-text-2: #C54DF1;
+$base-text-3: #ACA2F8;
 
 $base-border: #999999;
 $base-btn-disabled: #a2a2a5;
