add preview to home page

--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,5 +1,10 @@
 <div>
-  I am a home page
+  <h2 class="header">
+    Experience effortless shipping management:<br><span class="header__item">empowering</span> brokers,
+    shippers, and drivers<span class="header__item"> to drive<br> success together!</span>
+  </h2>
+
+  <img src="../../images/home-preview.png" alt="preview">
 </div>
 
 <article class="news">
