--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -11,10 +11,32 @@
 }
 
 .logo {
-  margin: 0 auto 0 0;
-  padding: spacing.$space-1 spacing.$space-2;
-  background: linear-gradient(90deg, color.$base-text-1 0%, color.$base-text-1 35%, color.$base-text-2 100%);
-  border-radius: border.$border-radius-6;
+  position: relative;
+  display: flex;
+  padding-left: spacing.$space-5;
+  cursor: pointer;
+
+  &__header {
+    z-index: 1;
+    margin: 0 auto 0 0;
+    padding: spacing.$space-1 spacing.$space-2;
+    background: linear-gradient(90deg, color.$base-text-1 0%, color.$base-text-1 35%, color.$base-text-2 100%);
+    border-radius: border.$border-radius-6;
+  }
+
+  &__back-btn {
+    position: absolute;
+    right: 0px;
+    color: color.$base-text-2;
+    font-weight: bolder;
+    opacity: 0;
+    transition: opacity 0.3s, right 0.3s;
+  }
+
+  &:hover &__back-btn {
+    right: calc(100% - 50px);
+    opacity: initial;
+  }
 }
 
 button {
